<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/myToolbarTHeme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/employee_details"
            android:textColor="@color/White"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="177dp"
            tools:layout_editor_absoluteY="14dp" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:background="@drawable/bottom_dropshadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblEmployeeId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/empployee_id"
        android:textColor="@color/Gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblEmployeeIdAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="- - -"
        android:textColor="@color/Black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmployeeId" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblEmployeeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/employee_name"
        android:textColor="@color/Gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmployeeIdAnswer" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblEmployeeNameAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="- - -"
        android:textColor="@color/Black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmployeeName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblEmployeeAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/employee_age"
        android:textColor="@color/Gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmployeeNameAnswer" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblEmployeeAgeAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="- - -"
        android:textColor="@color/Black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmployeeAge" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblEmployeeSalary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/employee_salary"
        android:layout_marginTop="10dp"
        android:textColor="@color/Gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmployeeAgeAnswer" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblEmployeeSalaryAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="- - -"
        android:textColor="@color/Black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmployeeSalary" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="- - -"
        android:textColor="@color/Black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>